Nucleus/apps/fe/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nucleus-fe-service
  namespace: pairbone
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: nucleus-fe
  type: ClusterIP
