Nucleus/apps/fe/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nucleus-fe-ingress
  namespace: pairbone
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 5000m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nucleus-fe.57-152-73-173.nip.io
      secretName: nucleus-fe-tls
  rules:
    - host: nucleus-fe.57-152-73-173.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nucleus-fe-service
                port:
                  number: 3000
